--- a/chaincode/package.json
+++ b/chaincode/package.json
@@ -1,7 +1,7 @@
 {
     "name": "chaincode",
-    "version": "0.0.1",
-    "description": "My Smart Contract",
+    "version": "0.1.3",
+    "description": "PAC Chain",
     "main": "index.js",
     "engines": {
         "node": ">=8",
@@ -14,7 +14,7 @@
         "start": "fabric-chaincode-node start"
     },
     "engineStrict": true,
-    "author": "John Doe",
+    "author": "Servio Palacios",
     "license": "Apache-2.0",
     "dependencies": {
         "fabric-contract-api": "1.4.2",
